# api-consumer

./: .gitignore  Dockerfile  README.md  env_example  pyproject.toml
.github/actions/common-steps/: action.yaml
.github/workflows/: ci.yaml
app/: config.py  main.py
app/clients/: cluster_client.py  http_client.py  utils.py
app/tests/: conftest.py  test_cluster_client.py
manifests/: Chart.yaml  values.yaml
manifests/templates/: _helpers.tpl  configmap.yaml  deployment.yaml
